--- a/Bericht/Konzept.tex
+++ b/Bericht/Konzept.tex
@@ -1,9 +1,10 @@
 
 \section{Umfrage}
-Im Rahmen der Projektvorbereitung soll auch eine Umfrage unter potenziellen Kunden erfolgen. So sollen möglichst früh in der Entwicklung Wünsche und die Sicht der Kunden auf ein Produkt oder ein Problem eingeholt werden. Hierbei handelt es sich um den sogenannten Customer Insight, welcher uns neue Perspektiven eröffnen soll. Damit soll verhindert werden, dass wir in unseren Ideen möglicherweise etwas ganz Entscheidendes vergessen, was aber aus der Sicht der Kunden besonders wichtig ist. Es sollen außerdem auch möglichst viele verschiedene Anforderungen der einzelnen Personen zu erhalten. Dafür haben wir eine Umfrage mit insgesamt 19 Fragen entwickelt. Am Ende konnten wir immerhin 44 Teilnehmende aufweisen.
+Im Rahmen der Projektvorbereitung sollte auch eine Umfrage unter potenziellen Kunden erfolgen. So sollen möglichst früh in der Entwicklung Wünsche und die Sicht der Kunden auf ein Produkt oder ein Problem eingeholt werden. Hierbei handelt es sich um den sogenannten Customer Insight, welcher uns neue Perspektiven eröffnen soll. Damit soll verhindert werden, dass wir in unseren Ideen möglicherweise etwas ganz Entscheidendes vergessen, was aber aus der Sicht der Kunden besonders wichtig ist. Es sollen außerdem auch möglichst viele verschiedene Anforderungen der einzelnen Personen erhalten werden. Dafür haben wir eine Umfrage mit insgesamt 19 Fragen entwickelt. Am Ende konnten wir immerhin 44 Teilnehmende aufweisen.
 \\
-Zuerst kamen ein paar Fragen zum Fahrzeug der Teilnehmer, z.B. von welcher Marke und wie alt es ist. Im zweiten Abschnitt stellten wir einige Frage zur Sicherheit der Fahrzeuge der Teilnehmer, z.B. wie sie gegen Diebstahl geschützt sind und ob schonmal etwas gestohlen wurde. Als nächstes folgten Fragen, mit denen wir direkte Bedürfnisse und Anforderungen für unser Produkt gewinnen wollten, unter anderem wurde gefragt, was ihn/sie an aktuell zu erwerbenden Autoalarmsystemen stört und wieviel er/sie maximal für ein solches System ausgeben würde. Zum Abschluss wurden noch ein paar persönliche Informationen für mögliche statistische Zusammenhänge abgefragt, wie Geschlecht, Alter und Beschäftigungsverhältnis.
-Konkret wurden die folgenden Fragen gestellt:
+\\
+Zuerst kamen ein paar Fragen zum Fahrzeug der Teilnehmer, z.B. von welcher Marke und wie alt es ist. Im zweiten Abschnitt stellten wir einige Fragen zur Sicherheit der Fahrzeuge der Teilnehmer, z.B. wie sie gegen Diebstahl geschützt sind und ob schon einmal etwas gestohlen wurde. Als nächstes folgten Fragen, mit denen wir direkte Bedürfnisse und Anforderungen für unser Produkt herausfinden wollten, unter anderem wurde gefragt, was ihn/sie an aktuell zu erwerbenden Autoalarmsystemen stört und wieviel er/sie maximal für ein solches System ausgeben würde. Zum Abschluss wurden noch ein paar persönliche Informationen für mögliche statistische Zusammenhänge abgefragt, wie Geschlecht, Alter und Beschäftigungsverhältnis.
+Konkret setzte sich die Umfrage aus folgenden Fragen zusammen:
 
 \begin{itemize}
 	\item Von welcher Marke ist dein Auto?
@@ -29,7 +30,7 @@ Konkret wurden die folgenden Fragen gestellt:
 Die Umfrage wurde mit Hilfe von Google Forms realisiert und ist noch unter folgendem Link abrufbar: https://forms.gle/qNTWM4qkF7ykG4tt9
 
 \section{Persona} 
-Im Rahmen des Projektes sollte die Frage geklärt werden: Wie kann die Fähigkeit, sich in andere Personen hineinversetzen zu können, ihre Bedürfnisse und Motivation nachzuvollziehen und Verhaltensmuster vorherzusagen, zur Zielgruppenanalyse genutzt werden? \cite{JosefineLepzien} Nachfolgend stellen wir kurz unsere Persona vor, welche wir mit Hilfe unserer Umfrage Auswertung konzipiert und charakterisiert haben. 
+Des Weiteren sollte die Frage geklärt werden: Wie kann die Fähigkeit, sich in andere Personen hineinversetzen zu können, ihre Bedürfnisse und Motivation nachzuvollziehen und Verhaltensmuster vorherzusagen, zur Zielgruppenanalyse genutzt werden? \cite{JosefineLepzien} Nachfolgend stellen wir kurz unsere Persona vor, welche wir auf Basis der Auswertung der im vorherigen Abschnitt erläuterten Umfrage  konzipiert und charakterisiert haben. 
 
 \begin{figure} [H]
 	\begin{center}
@@ -42,11 +43,12 @@ Unsere Persona namens Linus Schrödinger ist zusammenfassend gesagt, ein technik
 \\
 Ziel dieser Methode ist die Entwicklung von Nutzermodellen, die Personen einer spezifischen Zielgruppe mit bestimmten Merkmalen charakterisieren. Anhand einer generierten Persona kann vorausgesagt werden, was ein Charakter in bestimmten Situationen tun würde. \cite{JosefineLepzien}
 \\
-Diese Persona stellt also einen fiktiven Charakter dar, der stellvertretend für einen Käufer unseres Alarmsystems steht. Ein solch imaginäres Modell half uns, sich in die Lage eines Kunden während der Entwicklung unseres Projektes zu versetzen. Des Weiteren trägt die Auseinandersetzung dazu bei, sich mit konkreten Erwartungen, Zielen und Bedürfnissen des zukünftigen Kunden zu beschäftigen und unser System möglichst effizient und effektiv auf die von uns gewünschte Zielgruppe auszurichten.
+\\
+Diese Persona stellt also einen fiktiven Charakter dar, der stellvertretend für einen Käufer unseres Alarmsystems steht. Ein solch imaginäres Modell half uns, sich in die Lage eines Kunden während der Entwicklung unseres Prototypen zu versetzen. Des Weiteren trägt die Auseinandersetzung dazu bei, sich mit konkreten Erwartungen, Zielen und Bedürfnissen des zukünftigen Kunden zu beschäftigen und unser System möglichst effizient und effektiv auf die von uns gewünschte Zielgruppe auszurichten.
 
 
 \section{Konzept} 
-Nachdem wir mit Hilfe der Umfrage und der Persona schon einen groben Eindruck bekommen haben, auf welche Zielgruppe unser Produkt passen könnte und welche Eigenschaften und Funktionen es erfüllen soll, erstellten wir ein erstes, grobes Konzept. Dieses Konzept beinhaltet alle wesentlichen Komponenten unseres Produkts und ist in der folgenden Abbildung schematisch dargestellt.
+Nachdem wir mit Hilfe der Umfrage und der Persona schon einen groben Eindruck bekommen haben, auf welche Zielgruppe unser Produkt passen könnte und welche Eigenschaften und Funktionen es erfüllen soll, erstellten wir ein erstes Konzept. Dieses Konzept beinhaltet alle wesentlichen Komponenten unseres Produkts und ist in der folgenden Abbildung schematisch dargestellt.
 \begin{figure} [H]
 	\begin{center}
 		\includegraphics[width=1\textwidth]{Bilder/Konzept_Konzept.png}
