--- a/Bericht/Produkt.tex
+++ b/Bericht/Produkt.tex
@@ -1,6 +1,12 @@
-Unser Prototyp setzt sich derzeit aus 3 Systemen zusammen: dem Arduino samt Shield für die Möglichkeit der Ortung und Simkartenslot, den Webserver zur Datenverteilung und -bereitstellung sowie eine App für die Smartphone Betriebssysteme Android und iOS.
+Unser Prototyp setzt sich derzeit aus  3 unterschiedlichen Hauptkomponenten zusammen: dem Arduino samt Shield für die Möglichkeit der Ortung und Simkartenslot, den Webserver zur Datenverteilung und -bereitstellung sowie eine App für die Smartphone Betriebssysteme Android und iOS, wie in Abbildung \ref{product} festgehalten.
 
-\textbf{Bild (Raspi, Arduino, Smartphones mit geöffneter App)}
+\begin{figure} [H]
+	\begin{center}
+		\includegraphics[width=0.75\textwidth]{Bilder/Produkt.jpg}
+		\caption{\textit{Schrödingers Alarm}}
+		\label{product}
+	\end{center}
+\end{figure}
 
 \section{zukünftiges Produktangebot}
 Wir haben uns zwei Produktkategorien überlegt, mit denen wir Gewinn generieren können. Zum einen ist das ein monatliches Bezahlkonzept. Hierbei haben wir uns an dem Konzept einiger Mobilfunkanbieter orientiert. Die Überlegung ist, dass wir zwei hinzu buchbare Optionen anbieten und man nur das bezahlt, was wirklich gebraucht wird. Eine Optionen ist die Google Standort API für eine genauere und zuverlässigere Standorterkennung. Die andere Option ist das Bestellen einer Sim-Karte mit Mobilfunkvertrag. Die Idee ist hier, dass so gegen einen kleinen Aufpreis der Ease-of-Use unseres Produkts weiter gesteigert wird.
@@ -16,7 +22,7 @@ Für die direkte Konkurrenzanalyse haben wir uns für den Platzhirsch Amazon ent
 \begin{figure} [H]
 	\begin{center}
 		\includegraphics[width=0.75\textwidth]{Bilder/Produkt_Vergleich.png}
-		\caption{Vergleichsprodukt im unteren Preissegment}
+		\caption{Beispiel Vergleichsprodukt im unteren Preissegment}
 		\cite{Salind}
 		\label{product_vgl}
 	\end{center}
@@ -25,9 +31,9 @@ Es lässt sich festhalten, dass alle Systeme die gleiche Grundfunktion besitzen:
 
 \begin{itemize}
 	\item unser System ist nicht fest in sich verbaut, das bedeutet bei möglichen Defekten kann es leicht geöffnet werden und bei Bedarf einfach selbstständig repariert werden
-	\item Die Akkus sind austauschbar und können mit einem handelsüblichen Ladegerät bequem daheim aufgeladen werden, so muss das Gesamtsystem nicht aus dem Auto entnommen werden. Anmerkung: alle Systeme, die wir uns angesehen haben, haben fest verbaute Akku Systeme, die nur über Micro USB aufgeladen werden können
+	\item Die Akkus sind austauschbar und können mit einem handelsüblichen Ladegerät bequem daheim aufgeladen werden, so muss das Gesamtsystem nicht aus dem Auto entnommen werden. \textit{Anmerkung}: alle Systeme, die wir uns angesehen haben, haben fest verbaute Akku Systeme, die nur über Micro USB aufgeladen werden können
 	\item Aus diesen Punkten ergibt sich auch direkt der nächste positive Effekt: da alle Bestandteile leicht zugänglich und austauschbar sind, ist unser Produkt sehr viel nachhaltiger - zudem haben wir auf unnötige Kunststoff Bestandteile verzichtet
-	\item Des weiteren ist unser System durch sein zugängliches Design leicht erweiterbar und erinnert so unter anderem an die Uridee des \textit{Fairphone} mit seiner Komponenten Bauweise: man kauft nur, was man braucht, erhält aber garantiert ein funktionierendes Basissystem.
+	\item Des weiteren ist unser System durch sein zugängliches Design leicht erweiterbar und erinnert so unter anderem an die Uridee des \textit{Fairphone} mit seiner Komponenten Bauweise: man kauft nur, was man braucht, erhält aber  ein garantiert funktionierendes Basissystem.
 	\item Ebenfalls geht man bei unserem Produkt keine aufgezwungene Vertragspartner Bindung ein - der Internetanbieter kann sich der Kunde selbst aussuchen
 \end{itemize}
 Es lässt sich daher behaupten - Ja, Produkte wie dieses sind in der Basis nicht neu, dennoch haben wir uns Gedanken in ganz unterschiedliche Richtungen gemacht und unseren Ideenhorizont frei gehalten, so dass sich unser Produkt stetig mit und für den Kunden weiterentwickeln kann.
