--- a/Bericht/Projektmanagement.tex
+++ b/Bericht/Projektmanagement.tex
@@ -1,7 +1,7 @@
 
 Für das Projekt haben wir nach der agilen Methode SCRUM gearbeitet - daher wird man auf der Suche nach einem historischen Pflichten- und Lastenheft bei uns nicht fündig. Die in unserem Projektstrukturplan erfassten Arbeitspakete haben wir in einem sogenannten Trello-Board festgehalten. Dies ermöglichte uns dank einer selbstgewählten Kartenübersicht auf einem Blick schnell erfassen zu können, wo wir derzeit stehen und was noch unbedingt erledigt werden sollte. Ebenfalls haben wir unvorhergesehene Probleme dort festgehalten, um zum einem Stichpunkte für die Dokumentation festzuhalten und zum anderen nachvollziehen zu  können, weshalb wir manche Tickets  nicht so schnell fertig bearbeiten konnten, wie ursprünglich angenommen. 
 \begin{center}
-	\textit{SCRUM – „Pläne sind nichts. Planung ist alles“}
+	\textit{SCRUM – „Pläne sind nichts. Planung ist alles“}\footcite{RolfDraehter2019}
 \end{center}
 Die kurze zyklische Struktur von Scrum mit seinen wiederkehrenden Meetings bietet eine ständige Möglichkeit zur Überprüfung und Anpassung. Positiv ist hierbei auch, dass auch der Fortschritt zeitnah sichtbar und dementsprechend das Team motiviert wird. Anfänglich haben wir Sprints von 14 Tagen ausprobiert in der Retrospektive jedoch festgestellt, dass ein  7-tägiger Rhythmus, um schneller Probleme analysieren zu können und aufgrund der recht kurzen Gesamtbearbeitungszeit im ständigen Austausch zu sein, sinnvoller ist. Dies hat sich auch sehr bald als richtige Entscheidung herausgestellt, da das Gefühl “dass jeder nur seine Insel bearbeitet” minimiert werden konnte.
 
