--- a/Bericht/Zielsetzung.tex
+++ b/Bericht/Zielsetzung.tex
@@ -1,19 +1,32 @@
-Der Weg zur Realisierung des Projekts wird durch die modernsten Projektmanagement Methoden wie in einer aktuellen Firma durchgeführt werden.
+%Der Weg zur Realisierung des Projekts wird durch die modernsten Projektmanagement Methoden wie in einer aktuellen Firma durchgeführt werden.
+
+%Das Produkt soll das Problem des Autodiebstahls verringern und die Statistik des Verbrechens verringern. Dafür wird die modernste Technik verwendet und das Endprodukt günstig für den Kunden angeboten.
+%Der Kunde soll ein Sicherheitsgefühl bekommen, dass sein Auto sicher vor seiner Wohnung steht.\\\\
+%Das Projekt soll den Teammitglieder die kooperative Arbeitsweise beibringen.
+%Kompetenzerwerb soll dabei auch im Vordergrund liegen. Hierbei sollen neue fachliche Kenntnisse erlernt werden.
+%Die größte Herausforderung ist sowohl das schnelle Einarbeiten im Fachlichen als auch die Teamfähigkeit und die Zusammenarbeit in der Gruppe zu fördern.
+%Die Teammitglieder haben das Projekt genauer analysiert und dann die Aufgaben unter sich gerecht aufgeteilt:\\
+%\textbf{Paul Krause:} Die benötigte Hardware für das GPS-Modul im Fahrzeug bereitzustellen und dieses zu programmieren\\
+%\textbf{Lucas Hanisch:} Den Webserver bereitzustellen, der als Schnittstelle zwischen der Smartphone App und der Hardware dient\\
+%\textbf{Monique Golnik:} Die IOS App zu entwickeln\\
+%\textbf{Seifeddine Mhiri:} Die Android App zu entwickeln\\
+%Das Ziel ist, ein stabiles System zu kreieren, das den Schutz vor Autodiebstahl anbietet. Das Projekt soll so gut wie möglich realisiert werden, sodass es konkurrenzfähig ist.
 
 
 
+Das entstehende Produkt soll nicht nur die Problematik des Autodiebstahls verringern, sondern zusätzlich Faktoren wie Nutzerfreundlichkeit, Anschaffungs- und Wartungskosten sowie Nachhaltigkeit berücksichtigen. Des Weiteren möchten wir dank moderner Managementtechniken ein Verständnis erlangen, was es bedeutet, ein Produkt von einem Gedanken heraus zu entwerfen und zu entwickeln. Ebenfalls war es uns wichtig, dass wir uns mit Themenbereichen beschäftigen, die neu sind aber in denen wir uns gern einmal einarbeiten oder weiterentwickeln wollen - kurz: die persönlichen Interessen jedes Teammitgliedes sollten zusätzlich zu den zuvor genannten Faktoren berücksichtigt werden.
+\\
+\\
+Dank der Methode Design-Thinking war es uns möglich, unsere vielen Ideen zu filtern, zu fokussieren oder zu verwerfen. Hierbei gilt es sich nacheinander an den fünf Phasen
+\begin{itemize}
+	\item \textit{Verstehen - Welche Bedürfnisse, Probleme oder Wünsche haben Kunden?}
+	\item \textit{Ideen generieren }
+	\item \textit{Konzepte entwickeln - frühzeitiges Einholen von Feedback}
+	\item \textit{Prototyping}
+	\item \textit{MVP und Markteinführung}
+\end{itemize}
+zu orientieren, welche auch im Laufe der Dokumentation verdeutlicht dargestellt werden. \cite{Full2022}
 
-Das Produkt soll das Problem des Autodiebstahls verringern und die Statistik des Verbrechens verringern. Dafür wird die modernste Technik verwendet und das Endprodukt günstig für den Kunden angeboten.
-Der Kunde soll ein Sicherheitsgefühl bekommen, dass sein Auto sicher vor seiner Wohnung steht.\\\\
-Das Projekt soll den Teammitglieder die kooperative Arbeitsweise beibringen.
-Kompetenzerwerb soll dabei auch im Vordergrund liegen. Hierbei sollen neue fachliche Kenntnisse erlernt werden.
-Die größte Herausforderung ist sowohl das schnelle Einarbeiten im Fachlichen als auch die Teamfähigkeit und die Zusammenarbeit in der Gruppe zu fördern.
-Die Teammitglieder haben das Projekt genauer analysiert und dann die Aufgaben unter sich gerecht aufgeteilt:\\
-\textbf{Paul Krause:} Die benötigte Hardware für das GPS-Modul im Fahrzeug bereitzustellen und dieses zu programmieren\\
-\textbf{Lucas Hanisch:} Den Webserver bereitzustellen, der als Schnittstelle zwischen der Smartphone App und der Hardware dient\\
-\textbf{Monique Golnik:} Die IOS App zu entwickeln\\
-\textbf{Seifeddine Mhiri:} Die Android App zu entwickeln\\
-Das Ziel ist, ein stabiles System zu kreieren, das den Schutz vor Autodiebstahl anbietet. Das Projekt soll so gut wie möglich realisiert werden, sodass es konkurrenzfähig ist.
 
 
 
